--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "minimist": "1.2.0",
+    "polished": "^3.4.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
