--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
+    "start:server": "nodemon --exec npm run babel-node --  ./bin/www",
+    "babel-node": "babel-node",
     "presetup": "npm i chalk shelljs",
     "setup": "node ./internals/scripts/setup.js",
     "clean": "shjs ./internals/scripts/clean.js",
@@ -94,14 +96,15 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
-    "@babel/preset-env": "7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
     "add-asset-html-webpack-plugin": "3.1.3",
@@ -116,8 +119,10 @@
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
+    "cors": "^2.8.5",
     "coveralls": "3.0.3",
     "css-loader": "2.1.1",
+    "dotenv": "^8.2.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -127,8 +132,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-redux-saga": "1.0.0",
     "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -142,6 +147,8 @@
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
+    "pg": "^7.16.0",
+    "pg-hstore": "^2.3.3",
     "plop": "2.3.0",
     "pre-commit": "1.2.2",
     "prettier": "1.17.0",
@@ -149,7 +156,10 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
     "shelljs": "0.8.3",
+    "socket.io": "^2.3.0",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
