--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "chalk": "2.4.2",
+    "classnames": "^2.2.6",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
@@ -89,6 +90,7 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-text-fun": "^1.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
@@ -96,15 +98,15 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.7.7",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
     "add-asset-html-webpack-plugin": "3.1.3",
@@ -147,7 +149,7 @@
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
-    "pg": "^7.16.0",
+    "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "plop": "2.3.0",
     "pre-commit": "1.2.2",
