--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-scrolllock": "^5.0.0",
     "react-text-fun": "^1.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
