--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "react-scrolllock": "^5.0.0",
+    "react-spring": "^8.0.27",
     "react-text-fun": "^1.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
